// 
// Copyright Â© 2018 Aljabr, Inc.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// 

syntax = "proto3";

package fs;

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";

option go_package = "github.com/AljabrIO/koalja-operator/pkg/fs";

// FileSystem is the API used to access long term file storage
service FileSystem {
    // CreateVolumeForWrite creates a PersistentVolume that can be used to
    // write files to.
    rpc CreateVolumeForWrite(CreateVolumeForWriteRequest) returns (CreateVolumeForWriteResponse);
    // CreateFileURI creates a URI for the given file/dir 
    rpc CreateFileURI(CreateFileURIRequest) returns (CreateFileURIResponse);
    // CreateVolumeForRead creates a PersistentVolume for reading a given URI
    rpc CreateVolumeForRead(CreateVolumeForReadRequest) returns (CreateVolumeForReadResponse);
    // CreateFileView returns a view on the given file identified by the given URI.
    rpc CreateFileView(CreateFileViewRequest) returns (CreateFileViewResponse);
}

// CreateVolumeForWriteRequest contains arguments for CreateVolumeForWrite.
message CreateVolumeForWriteRequest {
    // Estimated capacity (in bytes) of the data that will be written
    int64 EstimatedCapacity = 1;
    // Name of the Node on which the PV must reside.
    // If not set, a random node is picked.
    string NodeName = 2;
    // If set and allow, this the PersistentVolume will be owned by this owner reference.
    k8s.io.apimachinery.pkg.apis.meta.v1.OwnerReference Owner = 3;
    // Namespace of the resources created for this request.
    string Namespace = 4;
}

// CreateVolumeForWriteResponse contains results for CreateVolumeForWrite.
message CreateVolumeForWriteResponse {
    // Name of the created PersistentVolume
    string VolumeName = 1;
    // Name of the PersistentVolumeClaim to mount
    string VolumeClaimName = 2;
    // Path of Node that contains the Volume (as HostPath volume)
    // Either VolumeName or VolumePath must be set, not both.
    string VolumePath = 3;
    // SubPath to add to VolumeName, VolumeClaimName or VolumePath.
    string SubPath = 4;
    // Name of the Node on which the volume is created
    string NodeName = 5;
    // If set, the caller must delete the PersistentVolume or PersistentVolumeClaim after use
    bool DeleteAfterUse = 6;
}

// CreateFileURIRequest contains arguments for CreateFileURI
message CreateFileURIRequest {
    // Scheme of the generated URI
    string Scheme = 1;
    // Name of the PersistentVolume that contains the file/dir
    string VolumeName = 2;
    // Name of the PersistentVolumeClaim that contains the file/dir
    string VolumeClaimName = 3;
    // Path of Node that contains the Volume (as HostPath volume)
    // One of VolumeName, VolumeClaimName or VolumePath must be set, not multiple.
    string VolumePath = 4;
    // SubPath to add to VolumeName or VolumePath.
    string SubPath = 5;
    // Name of the Node on which the volume resides
    string NodeName = 6;
    // Local path of the file/dir in the Volume
    string LocalPath = 7;
    // IsDir indicates if the URI is for a file (false) or a directory (true)
    bool IsDir = 8;
}

// CreateFileURIRequest contains results for CreateFileURI
message CreateFileURIResponse {
    // The created URI
    string URI = 1;
}

// CreateVolumeForReadRequest contains arguments for CreateVolumeForRead
message CreateVolumeForReadRequest {
    // The URI to read
    string URI = 1;
    // If set and allow, this the PersistentVolume will be owned by this owner reference.
    k8s.io.apimachinery.pkg.apis.meta.v1.OwnerReference Owner = 2;
    // Namespace of the resources created for this request.
    string Namespace = 3;
}

// CreateVolumeForReadResponse contains results for CreateVolumeForRead
message CreateVolumeForReadResponse {
    // Name of the created PersistentVolume
    string VolumeName = 1;
    // Name of the PersistentVolumeClaim to mount
    string VolumeClaimName = 2;
    // Path of Node that contains the Volume (as HostPath volume)
    // One of VolumeName, VolumeClaimName or VolumePath must be set, not multiple.
    string VolumePath = 3;
    // SubPath to add to VolumeName or VolumePath.
    string SubPath = 4;
    // Name of the Node on which the volume is resides
    string NodeName = 5;
    // Local path of the file/dir in the PersistentVolume
    string LocalPath = 6;
    // IsDir indicates if the URI is for a file (false) or a directory (true)
    bool IsDir = 7;
    // If set, the caller must delete the PersistentVolume after use
    bool DeleteAfterUse = 8;
}

message CreateFileViewRequest {
    // The URI of the file to create a view for
    string URI = 1;
    // If set, a small preview is returned instead of the full content
    bool Preview = 2;
}

message CreateFileViewResponse {
    // The content of the view
    bytes Content = 1;
    // The type of content of the view
    string ContentType = 2;
}
